Hama Change Log

Release 0.5 - Unreleased

  NEW FEATURES

   HAMA-518: Add MinIntCombiner to SSSP example (edwardyoon)
   HAMA-367: Runtime Compression of BSP Messages to Improve the Performance (Apurv Verma via tjungblut)
   HAMA-501: Add Avro RPC (tjungblut)
   HAMA-456: Add basic Graph interfaces and GraphJobRunner (edwardyoon)

  BUG FIXES

  IMPROVEMENTS

    HAMA-499: Refactor clearZKNodes() in BSPMaster (Apurv Verma via tjungblut)
    HAMA-485: Fill Counters with useful information (tjungblut)
    HAMA-497: Switch the trunk to Hadoop 1.0 based (edwardyoon) 
    HAMA-445: Make configurable checkpointing (Suraj Menon via edwardyoon)
    HAMA-498: BSPTask should periodically ping its parent (Suraj Menon via edwardyoon)
    HAMA-513: Move message classes to somewhere from bsp package. (tjungblut)
    HAMA-484: Counters should be accessible in client (tjungblut)    
    HAMA-483: Remove old and deprecated BSP API (tjungblut)    
    HAMA-514: Add maven-gpg-plugin to parent POM file (edwardyoon)
    HAMA-510: Add sendMessageToNeighbors() to Vertex (tjungblut)
    HAMA-502: Message API Improvement (edwardyoon)
  
Release 0.4 - February 5, 2012

  NEW FEATURES

   HAMA-493: Provide text to seq-file utils for graph examples (tjungblut)
   HAMA-491: Add dist module to generate release tarball (edwardyoon)
   HAMA-451: Show Supersteps in waitForCompletion in YARN (tjungblut) 
   HAMA-479: Add Counters to Hama Jobs (edwardyoon) 
   HAMA-454: Add Zookeeper as synchronization service to YARN (tjungblut)
   HAMA-258: Add Input Output system (edwardyoon)
   HAMA-458: Add Message Combiner (edwardyoon)
   HAMA-456: Add getPeerName(int index) and getNumPeers() (edwardyoon)
   HAMA-431: MapReduce NG integration (tjungblut)
   HAMA-449: Add tasks num of Job to web UI (edwardyoon)
   HAMA-428: Create a separate maven module and add basic structure for the Graph (edwardyoon)